- implement oauthCallback - set response token to cookie - update swagger docs
