# docs/swagger.json
@@ -106,13 +106,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict album name",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -226,7 +226,7 @@
                     "409": {
                         "description": "Conflict: album name",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -429,7 +429,7 @@
                     "409": {
                         "description": "Conflict artist name",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -543,7 +543,7 @@
                     "409": {
                         "description": "Conflict: artist name",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -760,13 +760,13 @@
                     "404": {
                         "description": "Not Found: Genre or artist does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict: Genre already exists on artist.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -820,7 +820,7 @@
                     "404": {
                         "description": "Not Found: Genre on artist does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -834,7 +834,7 @@
         },
         "/auth/login": {
             "post": {
-                "description": "Authenticates a user and returns a JWT token if successful.",
+                "description": "Authenticates a user and set cookies JWT token and refresh if successful.",
                 "consumes": [
                     "application/json"
                 ],
@@ -857,8 +857,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/ResponseMessage"
                         }
@@ -872,13 +872,13 @@
                     "403": {
                         "description": "Account not activated",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Invalid email or password",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -892,7 +892,7 @@
         },
         "/auth/logout": {
             "post": {
-                "description": "Remove refresh token from cookies and revoke session",
+                "description": "Remove access and refresh token from cookies and revoke session",
                 "consumes": [
                     "application/json"
                 ],
@@ -913,13 +913,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -954,9 +954,55 @@
                 }
             }
         },
+        "/auth/oauth/callback": {
+            "post": {
+                "description": "Handles the redirect from OAuth login/signup and set cookies JWT token and refresh if successful.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "handles OAuth callback from login/register.",
+                "parameters": [
+                    {
+                        "description": "oauth object that needs to be login/register",
+                        "name": "oauth",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/OAuthRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Authenticated successfully with OAuth",
+                        "schema": {
+                            "$ref": "#/definitions/ResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid body request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/oauth/github/callback": {
             "post": {
-                "description": "Handles the redirect from GitHub after OAuth login/signup and returns a JWT token if successful.",
+                "description": "Handles the redirect from GitHub after OAuth login/signup and set cookies JWT token and refresh if successful.",
                 "consumes": [
                     "application/json"
                 ],
@@ -982,37 +1028,37 @@
                     "200": {
                         "description": "Authenticated successfully with GitHub",
                         "schema": {
-                            "$ref": "#/definitions/ResponseWithData-string-string"
+                            "$ref": "#/definitions/ResponseMessage"
                         }
                     },
                     "400": {
                         "description": "Invalid request or missing code",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized: Bad credentials",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found: Github user does not exists",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "408": {
                         "description": "Time Out: Fetching GitHub email timed out",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -1033,21 +1079,21 @@
                 "summary": "Refresh access token",
                 "responses": {
                     "200": {
-                        "description": "New access token",
+                        "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/ResponseWithData-string-string"
+                            "$ref": "#/definitions/ResponseMessage"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -1093,7 +1139,7 @@
                     "409": {
                         "description": "Username or email already exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -1145,13 +1191,13 @@
                     "404": {
                         "description": "Email does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Email is already verified.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -1195,7 +1241,7 @@
                     "404": {
                         "description": "Email does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -1247,19 +1293,19 @@
                     "404": {
                         "description": "Email or Code does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Email is already verified.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "410": {
                         "description": "Code has expired.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -1361,7 +1407,7 @@
                     "409": {
                         "description": "Conflict: Song already exists on favorites.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -1408,7 +1454,7 @@
                     "404": {
                         "description": "Not Found: Song on favorites does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -2151,13 +2197,13 @@
                     "404": {
                         "description": "Not Found: Playlist or song does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict: Song already exists on playlist.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -2211,7 +2257,7 @@
                     "404": {
                         "description": "Not Found: Song on playlist does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -2578,13 +2624,13 @@
                     "404": {
                         "description": "Not Found: Genre or song does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict: Genre already exists on song.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -2638,7 +2684,7 @@
                     "404": {
                         "description": "Not Found: Genre on song does not exists.",
                         "schema": {
-                            "$ref": "#/definitions/ValidationErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
@@ -3082,6 +3128,37 @@
                 }
             }
         },
+        "OAuthRequest": {
+            "type": "object",
+            "required": [
+                "avatar",
+                "email",
+                "full_name",
+                "provider",
+                "provider_id",
+                "username"
+            ],
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "provider_id": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "Pagination": {
             "type": "object",
             "properties": {
@@ -3138,14 +3215,6 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
-                }
-            }
-        },
-        "ResponseError": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
@@ -3242,17 +3311,6 @@
                     "items": {
                         "$ref": "#/definitions/Song"
                     }
-                }
-            }
-        },
-        "ResponseWithData-string-string": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
                 }
             }
         },
@@ -3377,6 +3435,9 @@
                 },
                 "image": {
                     "$ref": "#/definitions/Image"
+                },
+                "role": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
